ajout de jwt et refactoring de certaines methodes dans app service